# gigascli

./: Cargo.toml  README.md
docs/: Things-to-do.txt  To-do.txt  todo.txt
src/: main.rs
