[package]
name = "gigascli"
version = "0.1.8"
authors = ["Andrés Villalobos <andresalvivar@gmail.com>"]
repository = "https://github.com/alvivar/gigascli"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
walkdir = "2.3.2"
self_update = "0.26.0"
